--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "ratemyprofessor-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -7,5 +16,16 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sun-shin/ratemyprofessor-clone.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sun-shin/ratemyprofessor-clone/issues"
+  },
+  "homepage": "https://github.com/sun-shin/ratemyprofessor-clone#readme",
+  "description": ""
 }
